# workbook_yvonne-vullers

./: .gitignore  README.md
code/: affine.h  main.cpp  step-by-step.cpp
create_ellipse/: CMakeLists.txt  README.md  create_ellipse.cpp  ellipse.ipynb  first_40.csv  frames.cpp  ground_truth.csv  last_40.csv  polyfit.ipynb  readData.cpp  shift.ipynb
ellipse_code/: CMakeLists.txt  README.md  affine.h  center.csv  config.ini  eros.h  erosplus.h  main.cpp  step-by-step.cpp
evaluation/: README.md  evaluation.ipynb  evaluation.txt  plot.ipynb
evaluation/CenterData/User13/0/: ground_truth_13_0.csv  user13_0.txt
evaluation/CenterData/User13/0/eros_cut_cut/: center_13_0.csv
evaluation/CenterData/User13/1/: ground_truth_13_1.csv  user13_1.txt
evaluation/CenterData/User18/0/: ground_truth_18_0.csv
evaluation/CenterData/User18/1/: ground_truth_18_1.csv  user18_1.txt
evaluation/CenterData/User19/0/: ground_truth_19_0.csv  user19_0.txt
evaluation/CenterData/User19/1/: ground_truth_19_1.csv  user19_1.txt
evaluation/CenterData/User5/0/: ground_truth_5_0.csv  user5_0.txt
evaluation/CenterData/User5/1/: ground_truth_5_1.csv  user5_1.txt
evaluation/error/: error_eros_cut_cut.txt  error_eros_cut_full.txt  error_eros_full_cut.txt  error_eros_full_full.txt  error_fixed_cut_cut.txt  std_eros_cut_cut.txt  std_eros_cut_full.txt  std_eros_full_cut.txt  std_eros_full_full.txt  std_fixed_cut_cut.txt
evaluation/frequency/: frequency_eros_cut_cut.txt  frequency_eros_cut_full.txt  frequency_eros_full_cut.txt  frequency_eros_full_full.txt  frequency_fixed_cut_cut.txt
(+168 files in other folders)
